test fit-content value for height issue on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,14 +16,7 @@ body {
     font-family: 'Manrope', sans-serif;
     background-color: var(--gigmate-white);
     overflow: hidden;
-    height: calc(100vh - calc(100vh - 100%));
-    min-height: 100vh;
-    height: -webkit-fill-available;
-}
-
-html {
-    min-height: 100vh;
-    height: -webkit-fill-available;
+    min-height: fit-content;
 }
 
 /* Scrollbar styling */
